updated index file with appropriate data for assignment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
 	<title>Dan Ross Comp20 Portfolio</title>
@@ -8,10 +8,46 @@
 </head>
 
 <body>
-	<h1>Daniel Ross</h1>
-	<p><img src="images/dross_01.jpg"></p>
-	<p><a href="resume.html">Resume</a></p>
-	<p><a href="bio.html">Bio</a></p>
+	<div id="page">
+		<div id="header">
+			<h1 id="name"><span>Daniel Ross</span></h1>
+		</div>
+
+		<div id="daninfo">
+			<p><img src="images/dross_01.jpg" alt="Image of Daniel Ross" id="dan"></p>
+			<div id="about">
+				<h3 id="aboutmetitle">About Me</h3>
+				<p id="aboutme">Hi, I'm Dan! I am a Computer Science Post-Bac at Tufts University. Previously I worked for MetLife as a Business Systems Analyst in Denver, CO. I graduated from Amherst College in 2015 with a degree in Environment Studies and Economics. I am most passionate about coding, skiing, and sneakers. Feel free to reach out via the links on the right or send me an email at danielpross@mac.com.</p>
+				<div id="links">
+					<ul>
+						<li>
+							<p><a href="resume.html" class="link">Resume</a></p>
+						</li>
+						<li>
+							<p><a href="bio.html" class="link">Bio</a></p>
+						</li>
+						<li>
+							<p><a href="https://www.linkedin.com/in/daniel-ross" class="link">LinkedIn</a></p>
+						</li>
+						<li>
+							<p><a href="https://github.com/dross15" class="link">GitHub</a></p>
+						</li>
+						<li>
+							<p><a href="https://twitter.com/daniel_p_ross" class="link">Twitter</a></p>
+						</li>
+						<li>
+							<p><a href="https://www.facebook.com/dan.ross.5811" class="link">Facebook</a></p>
+						</li>
+						<li>
+							<p><a href="https://www.instagram.com/dan_ge_ross/" class=link>Instagram</a></p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+<p id="footertext"><span>Created by Dan Ross in Cambridge, MA. Updated September 2017.</span></p>
+	</div>
+	
 </body>
 
 </html>
