--- a/resume.html
+++ b/resume.html
@@ -8,30 +8,71 @@
 </head>
 
 <body>
-	<h1>Daniel Ross</h1>
-	<h1>Education</h1>
-		<ul>
-			<li>Tufts Computer Science Post-Bac</li>
-			<li>Amherst College</li>
-			<li>Hopkins School</li>
-		</ul>
-	<h1>Professional Experience</h1>
-		<ul>
-			<li>MetLife</li>
-		</ul>
-	<h1>Skills</h1>
-		<ul>
-			<li>HTML/CSS</li>
-			<li>Javascript</li>
-			<li>Java</li>
-			<li>C</li>
-			<li>C++</li>
-			<li>SQL</li>
-			<li>Adobe Photoshop</li>
-			<li>Adobe Illustrator</li>
-			<li>Salesforce</li>
-			<li>Requirements Gathering</li>
-		</ul>
+	<div id="page">
+	<div id="header">
+			<h1 id="name"><span><a href="index.html">Daniel Ross</a></span></h1>
+		</div>
+	<div id="resume">
+		<div id="innerresumetext">
+	<h2 class="underline">Education</h2>
+			<h3>I have attended:</h3>
+			<p class="bold">Tufts University</p>
+			<p class="italics">Computer Science Post-Bac</p>
+			<p>Expected May 2017</p>
+			<p>Relevant Courses: COMP15 Data Structures, COMP20 Web Programming, COMP40 Machine Structures and Assembly Language Programming, COMP61 Discrete Mathematics</p>
+			<p class="bold">Amherst College</p>
+			<p class="italics">Bachelor of Arts in Environmental Studies with an Economics Conceration</p>
+			<p>May 2015</p>
+			<p class="bold">Hopkins School</p>
+			<p class="italics">Diploma</p>
+			<p>June 2011</p>
+	<h2 class="underline">Professional Experience</h2>
+			<h3>I have worked at:</h3>
+		<p class="bold">MetLife</p>
+		<p class="italics">Business Systems Analyst</p>
+		<p>July 2015 - May 2017</p>
+	
+			<ul>
+				<li>Served as primary analyst on six person team responsible for two Annuity Rider improvements
+				</li>
+					<ul>
+						<li>Wrote functional requirements and contributed to logic behind two COBOL programs which automated business practices; predicted to save over 300 hours in year one with savings expected to increase exponentially</li>
+						<li>Assembled technical rules and file layouts for downstream systems to print correspondence letters </li>
+						<li>Performed integration and regression defect testing on code deployments</li>
+					</ul>
+				<li>Served as primary analyst on four person team responsible for two Annuity Rider improvements
+				</li>
+					<ul>
+						<li>Wrote functional requirements and contributed to logic behind two COBOL programs which automated business practices; predicted to save over 300 hours in year one with savings expected to increase exponentially</li>
+						<li>Assembled technical rules and file layouts for downstream systems to print correspondence letters </li>
+						<li>Performed integration and regression defect testing on code deployments</li>
+					</ul>
+				<li>Functioned as primary analyst on four person team responsible for $1,000,000 of $9,000,000 MetLife Salesforce integration for Annuity Call Center Operations </li>
+					<ul>
+						<li>Gathered functional requirements for web services which pass data between Annuity databases and Salesforce UI by analyzing Call Center UI and worked with developers to mock up responses for GET and POST calls </li>
+						<li>Developed SQL queries and self taught SOAP UI to test web services and made sure functioned as expected</li>
+						<li>Used File Transfer Protocol (FTP) to transfer eight years of call center data from SQL to Mongo database</li>
+				</ul>
+				<li>Operated as one of two analysts on team of eight developing MetLife Fixed Index Annuity product that is scheduled to have over $5 Billion dollars in sales and multi million dollars in ROI in year one</li>
+				<ul>
+					<li>Collected functional requirements for downstream and correspondence systems through discussions with business about financial aspects of products, investigated file layouts in IBM Mainframe, and confirmed observations with </li>
+					<li>Mocked up new UI screens for Fixed Index Annuity product</li>
+					</ul>
+				<li>Mentored new hires and helped steer the Business Systems Analysis team toward more effective practices</li>
+				<ul>
+					<li>Implemented weekly newsletter on market events to help team better understand MetLife’s business initiatives</li>
+					<li>Held “lunch and learns” to teach fellow coworkers basic web development</li>
+				</ul>
+			</ul>
+	<h2 class="underline">Skills</h2>
+		<h3>I have experience with the following:</h3><p>HTML/CSS, JavaScript, Java, C, C++, SQL, Adobe Photoshop, Adobe Illustrator, Salesforce, Requirements Gathering</p>
+	<h2 class="underline">Activities</h2>
+			<h3>I am passionate about:</h3>
+			<p>Coding, Design, Skiing, Crossfit, Music (Drummer), Sneakers</p>
+	</div>
+		</div>
+		<p id="footertextresume"><span>Created by Dan Ross in Cambridge, MA. Updated September 2017.</span></p>
+		</div>
 </body>
 
 </html>
