fixed errors related to unordered list

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
 	<title>Dan Ross Comp20 Portfolio Resume</title>
@@ -35,34 +35,34 @@
 			<ul>
 				<li>Served as primary analyst on six person team responsible for two Annuity Rider improvements
 				</li>
-					<ul>
+					<li class="nobullet"><ul>
 						<li>Wrote functional requirements and contributed to logic behind two COBOL programs which automated business practices; predicted to save over 300 hours in year one with savings expected to increase exponentially</li>
 						<li>Assembled technical rules and file layouts for downstream systems to print correspondence letters </li>
 						<li>Performed integration and regression defect testing on code deployments</li>
-					</ul>
+					</ul></li>
 				<li>Served as primary analyst on four person team responsible for two Annuity Rider improvements
 				</li>
-					<ul>
+					<li class="nobullet"><ul>
 						<li>Wrote functional requirements and contributed to logic behind two COBOL programs which automated business practices; predicted to save over 300 hours in year one with savings expected to increase exponentially</li>
 						<li>Assembled technical rules and file layouts for downstream systems to print correspondence letters </li>
 						<li>Performed integration and regression defect testing on code deployments</li>
-					</ul>
+					</ul></li>
 				<li>Functioned as primary analyst on four person team responsible for $1,000,000 of $9,000,000 MetLife Salesforce integration for Annuity Call Center Operations </li>
-					<ul>
+					<li class="nobullet"><ul>
 						<li>Gathered functional requirements for web services which pass data between Annuity databases and Salesforce UI by analyzing Call Center UI and worked with developers to mock up responses for GET and POST calls </li>
 						<li>Developed SQL queries and self taught SOAP UI to test web services and made sure functioned as expected</li>
 						<li>Used File Transfer Protocol (FTP) to transfer eight years of call center data from SQL to Mongo database</li>
-				</ul>
+				</ul></li>
 				<li>Operated as one of two analysts on team of eight developing MetLife Fixed Index Annuity product that is scheduled to have over $5 Billion dollars in sales and multi million dollars in ROI in year one</li>
-				<ul>
+				<li class="nobullet"><ul>
 					<li>Collected functional requirements for downstream and correspondence systems through discussions with business about financial aspects of products, investigated file layouts in IBM Mainframe, and confirmed observations with </li>
 					<li>Mocked up new UI screens for Fixed Index Annuity product</li>
-					</ul>
+					</ul></li>
 				<li>Mentored new hires and helped steer the Business Systems Analysis team toward more effective practices</li>
-				<ul>
+				<li class="nobullet"><ul>
 					<li>Implemented weekly newsletter on market events to help team better understand MetLife’s business initiatives</li>
 					<li>Held “lunch and learns” to teach fellow coworkers basic web development</li>
-				</ul>
+				</ul></li>
 			</ul>
 	<h2 class="underline">Skills</h2>
 		<h3>I have experience with the following:</h3><p>HTML/CSS, JavaScript, Java, C, C++, SQL, Adobe Photoshop, Adobe Illustrator, Salesforce, Requirements Gathering</p>
