changed about me text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<p><img src="images/dross_01.jpg" alt="Image of Daniel Ross" id="dan"></p>
 			<div id="about">
 				<h3 id="aboutmetitle">About Me</h3>
-				<p id="aboutme">Hi, I'm Dan! I am a Computer Science Post-Bac at Tufts University. Previously I worked for MetLife as a Business Systems Analyst in Denver, CO. I graduated from Amherst College in 2015 with a degree in Environment Studies and Economics. I am most passionate about coding, skiing, and sneakers. Feel free to reach out via the links on the right or send me an email at danielpross@mac.com.</p>
+				<p id="aboutme">Hi, I'm Dan! I am a Computer Science Post-Bac at Tufts University. Previously I worked for MetLife as a Business Systems Analyst in Denver, CO. I graduated from Amherst College in 2015 with a degree in Environment Studies and Economics. I am most passionate about coding, skiing, and sneakers. Feel free to reach out via the links or send me an email at danielpross@mac.com.</p>
 				<div id="links">
 					<ul>
 						<li>
