--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
 			<p>Expected May 2017</p>
 			<p>Relevant Courses: COMP15 Data Structures, COMP20 Web Programming, COMP40 Machine Structures and Assembly Language Programming, COMP61 Discrete Mathematics</p>
 			<p class="bold">Amherst College</p>
-			<p class="italics">Bachelor of Arts in Environmental Studies with an Economics Conceration</p>
+			<p class="italics">Bachelor of Arts in Environmental Studies with an Economics Concentration</p>
 			<p>May 2015</p>
 			<p class="bold">Hopkins School</p>
 			<p class="italics">Diploma</p>
