--- a/resume.html
+++ b/resume.html
@@ -19,53 +19,53 @@
 			<p class="bold">Tufts University</p>
 			<p class="italics">Computer Science Post-Bac</p>
 			<p>Expected May 2017</p>
-			<p>Relevant Courses: COMP15 Data Structures, COMP20 Web Programming, COMP40 Machine Structures and Assembly Language Programming, COMP61 Discrete Mathematics</p>
+			<p>Relevant Courses: Data Structures, Web Programming, Machine Structures and Assembly Language Programming, Discrete Mathematics, Algorithms, Cybersecurity</p>
 			<p class="bold">Amherst College</p>
-			<p class="italics">Bachelor of Arts in Environmental Studies with an Economics Concentration</p>
+			<p class="italics">Bachelor of Arts in Environmental Studies</p>
 			<p>May 2015</p>
 			<p class="bold">Hopkins School</p>
 			<p class="italics">Diploma</p>
 			<p>June 2011</p>
 	<h2 class="underline">Professional Experience</h2>
 			<h3>I have worked at:</h3>
+		<p class="bold">Harvard University, School of Engineering and Applied Sciences</p>
+		<p class="italics">Instructional Technology Intern</p>
+		<p>January 2018 - Present</p>
+		<ul>
+			<li>Contribute to EdTech applications used in Harvard CS courses through full stack development using Node.js, Express, Bootstrap, and MongoDB</li>
+				<li class="nobullet"><ul>
+					<li>Applied bag-of-words model to detect headers when uloading CSV files</li>
+					<li>Integrated flow network to match students to graders for assignments</li>
+					<li>Updated logic to upload grades/comments to specific rubric items in Canvas</li>
+					<li>Automate UI tests using Selenium and Mocha to confirm proper functionality</li>
+				</ul></li>
+		</ul>
+
+		<p class="bold">The Fletcher School of Law and Diplomacy at Tufts University</p>
+		<p class="italics">Research Assistant</p>
+		<p>January 2018 - Present</p>
+		<ul>
+			<li>Maintain <a href="https://sites.tufts.edu/cybersecurity">Tufts University Cybersecurity website </a>using HTML/CSS and WordPress</li>
+		</ul>
+
 		<p class="bold">MetLife</p>
 		<p class="italics">Business Systems Analyst</p>
 		<p>July 2015 - May 2017</p>
 	
 			<ul>
-				<li>Served as primary analyst on six person team responsible for two Annuity Rider improvements
+				<li>Wrote functional requirements, produced UI mockups, and performed integration testing through projects' life cycles (SDLC) in Waterfall and Agile environments
 				</li>
-					<li class="nobullet"><ul>
-						<li>Wrote functional requirements and contributed to logic behind two COBOL programs which automated business practices; predicted to save over 300 hours in year one with savings expected to increase exponentially</li>
-						<li>Assembled technical rules and file layouts for downstream systems to print correspondence letters </li>
-						<li>Performed integration and regression defect testing on code deployments</li>
-					</ul></li>
-				<li>Served as primary analyst on four person team responsible for two Annuity Rider improvements
-				</li>
-					<li class="nobullet"><ul>
-						<li>Wrote functional requirements and contributed to logic behind two COBOL programs which automated business practices; predicted to save over 300 hours in year one with savings expected to increase exponentially</li>
-						<li>Assembled technical rules and file layouts for downstream systems to print correspondence letters </li>
-						<li>Performed integration and regression defect testing on code deployments</li>
-					</ul></li>
-				<li>Functioned as primary analyst on four person team responsible for $1,000,000 of $9,000,000 MetLife Salesforce integration for Annuity Call Center Operations </li>
-					<li class="nobullet"><ul>
-						<li>Gathered functional requirements for web services which pass data between Annuity databases and Salesforce UI by analyzing Call Center UI and worked with developers to mock up responses for GET and POST calls </li>
-						<li>Developed SQL queries and self taught SOAP UI to test web services and made sure functioned as expected</li>
-						<li>Used File Transfer Protocol (FTP) to transfer eight years of call center data from SQL to Mongo database</li>
-				</ul></li>
-				<li>Operated as one of two analysts on team of eight developing MetLife Fixed Index Annuity product that is scheduled to have over $5 Billion dollars in sales and multi million dollars in ROI in year one</li>
-				<li class="nobullet"><ul>
-					<li>Collected functional requirements for downstream and correspondence systems through discussions with business about financial aspects of products, investigated file layouts in IBM Mainframe, and confirmed observations with </li>
-					<li>Mocked up new UI screens for Fixed Index Annuity product</li>
-					</ul></li>
-				<li>Mentored new hires and helped steer the Business Systems Analysis team toward more effective practices</li>
-				<li class="nobullet"><ul>
-					<li>Implemented weekly newsletter on market events to help team better understand MetLife’s business initiatives</li>
-					<li>Held “lunch and learns” to teach fellow coworkers basic web development</li>
-				</ul></li>
+				<li>Researched MetLife's web services and databases to support Salesforce integration</li>
+				<li>Developed SQL queries to analyze scenarios and assist business partners</li>	
 			</ul>
+	<h2 class="underline">Projects</h2>
+		<p><b><a href="https://muncheez.herokuapp.com">Muncheez:</a></b> web-based application to match hungry students with on demand chefs</p>
 	<h2 class="underline">Skills</h2>
-		<h3>I have experience with the following:</h3><p>HTML/CSS, JavaScript, Java, C, C++, SQL, Adobe Photoshop, Adobe Illustrator, Salesforce, Requirements Gathering</p>
+		<p><b>Programming Languages:</b> C, C++, Java, JavaScript, Python</p>
+		<p><b>Platforms:</b> Heroku, MongoDB, jQuery, Node.js, Express, HTML/CSS</p>
+		<p><b>Frameworks:</b> Boostrap, Selenium, Mocha</p>
+		<p><b>Tools: </b> Git, SQL Server, Salesforce, Adobe Illustrator, Adobe Photoshop, WordPress, Balsamiq</p>
+		<p><b>Security: </b> Wireshark, Scap, Nmap, Ettercap, Shodan, John the Ripper, Burp Suite</p>
 	<h2 class="underline">Activities</h2>
 			<h3>I am passionate about:</h3>
 			<p>Coding, Design, Skiing, Crossfit, Music (Drummer), Sneakers</p>
