--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
 		<p class="italics">Research Assistant</p>
 		<p>January 2018 - Present</p>
 		<ul>
-			<li>Maintain <a href="https://sites.tufts.edu/cybersecurity">Tufts University Cybersecurity website </a>using HTML/CSS and WordPress</li>
+			<li>Maintain <a href="https://sites.tufts.edu/cybersecurity" target="_blank">Tufts University Cybersecurity website </a>using HTML/CSS and WordPress</li>
 		</ul>
 
 		<p class="bold">MetLife</p>
@@ -59,13 +59,13 @@
 				<li>Developed SQL queries to analyze scenarios and assist business partners</li>	
 			</ul>
 	<h2 class="underline">Projects</h2>
-		<p><b><a href="https://muncheez.herokuapp.com">Muncheez:</a></b> web-based application to match hungry students with on demand chefs</p>
+		<p><b><a href="https://muncheez.herokuapp.com" target="_blank">Muncheez:</a></b> web-based application to match hungry students with on demand chefs</p>
 	<h2 class="underline">Skills</h2>
 		<p><b>Programming Languages:</b> C, C++, Java, JavaScript, Python</p>
 		<p><b>Platforms:</b> Heroku, MongoDB, jQuery, Node.js, Express, HTML/CSS</p>
 		<p><b>Frameworks:</b> Boostrap, Selenium, Mocha</p>
 		<p><b>Tools: </b> Git, SQL Server, Salesforce, Adobe Illustrator, Adobe Photoshop, WordPress, Balsamiq</p>
-		<p><b>Security: </b> Wireshark, Scap, Nmap, Ettercap, Shodan, John the Ripper, Burp Suite</p>
+		<p><b>Security: </b> Wireshark, Scappy, Nmap, Ettercap, Shodan, John the Ripper, Burp Suite</p>
 	<h2 class="underline">Activities</h2>
 			<h3>I am passionate about:</h3>
 			<p>Coding, Design, Skiing, Crossfit, Music (Drummer), Sneakers</p>
