--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
 	<h2 class="underline">Skills</h2>
 		<p><b>Programming Languages:</b> C, C++, Java, JavaScript, Python</p>
 		<p><b>Platforms:</b> Heroku, MongoDB, jQuery, Node.js, Express, HTML/CSS</p>
-		<p><b>Frameworks:</b> Boostrap, Selenium, Mocha</p>
+		<p><b>Frameworks:</b> Bootstrap, Selenium, Mocha</p>
 		<p><b>Tools: </b> Git, SQL Server, Salesforce, Adobe Illustrator, Adobe Photoshop, WordPress, Balsamiq</p>
 		<p><b>Security: </b> Wireshark, Scappy, Nmap, Ettercap, Shodan, John the Ripper, Burp Suite</p>
 	<h2 class="underline">Activities</h2>
