updated resume and bio

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 		<ul>
 			<li>Contribute to EdTech applications used in Harvard CS courses through full stack development using Node.js, Express, Bootstrap, and MongoDB</li>
 				<li class="nobullet"><ul>
-					<li>Applied bag-of-words model to detect headers when uloading CSV files</li>
+					<li>Applied bag-of-words model to detect headers when uploading CSV files</li>
 					<li>Integrated flow network to match students to graders for assignments</li>
 					<li>Updated logic to upload grades/comments to specific rubric items in Canvas</li>
 					<li>Automate UI tests using Selenium and Mocha to confirm proper functionality</li>
@@ -71,7 +71,7 @@
 			<p>Coding, Design, Skiing, Crossfit, Music (Drummer), Sneakers</p>
 	</div>
 		</div>
-		<p id="footertextresume"><span>Created by Dan Ross in Cambridge, MA. Updated September 2017.</span></p>
+		<p id="footertextresume"><span>Created by Dan Ross in Cambridge, MA. Updated April 2018.</span></p>
 		</div>
 </body>
 
